# datarig

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_old  c4noclean_prepare.yaml  dclm_pool_lang.yaml  deployment.yaml  fasttext.yaml  fasttext_filter_annotate.yaml  fasttext_filtered_stats.csv  instruction.md  job.yaml  job2.yaml  job3.yaml  job_320.yaml  job_320_r2.yaml  job_dedup.yaml  job_model.yaml  job_model_v2.yaml  job_process.yaml  job_process_v4.yaml  job_process_v4_320.yaml  job_v3_0.yaml  job_v3_1.yaml  requirements.txt  requirements_fineweb.txt  requirements_new.txt  run_dedup.sh  sample.py  setup.py  start.sh
analysis/: gen_thres.py  score.py
ray_processing/: Dockerfile  dedup_jsonl.py  process.py  start.sh  utils.py
rust_processing/quality-rs/: Cargo.toml  README.md  config.sh  run.sh  server_list.txt  stop.sh
rust_processing/quality-rs/src/: filter.rs  io.rs  lib.rs  main.rs  oss.rs  task.rs  task_queue.rs  util.rs
scripts/: all_sample.py  analysis.py  analysis_gopher_repetition.py  check_file_num.py  copy_oss_dir.py  csv2jsonl.py  download_file.py  download_files_from_oss.py  fix_stuck_temp.py  gen_all_stats.py  gen_sample.py  get_all_subject_size.py  get_finished_subjects.py  get_linenum.py  get_nodes_memory.py  get_retry_tasks.py  get_sample_output_size.py  get_size.py  goon.py  jsonl2csv.py  lock_expire_check.py  merge_jsonl_to_csv.py  merge_jsonl_to_csv2.py  new_r3_subject_sample.py  oss_uploader.py  pods_status_check.py  r3_13subject_sample.py  requeue.py  split_file_uploader  split_large_file.py  sync_quene.py  sync_queue.py  sync_tasks.py  (+2 more)
(+84 files in other folders)
